--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "npm run prettier:fix && npm run lint:fix"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.3",
     "@hookform/resolvers": "^2.9.10",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
