--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-error-boundary": "^3.1.4",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.39.2",
+    "react-loading-overlay": "^1.0.1",
     "react-query": "^3.39.2",
     "react-query-auth": "^1.1.0",
     "react-router-dom": "^6.4.3",
