--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-query": "^3.39.2",
     "react-query-auth": "^1.1.0",
     "react-router-dom": "^6.4.3",
+    "react-toastify": "^9.1.1",
     "zod": "^3.19.1",
     "zustand": "^4.1.4"
   },
